# nanodet

./: .gitignore  README.md  nanodet-plus-m-1.5x_416.yml  requirements.txt
CocoDataset/ann/: train.json  val.json
config/: nanodet-plus-m-1.5x_416.yml
config/legacy_v0.x_configs/: nanodet-g.yml  nanodet-m-0.5x.yml  nanodet-m.yml
config/legacy_v0.x_configs/EfficientNet-Lite/: nanodet-EfficientNet-Lite0_320.yml
demo/: demo.py
demo_mnn/: CMakeLists.txt  README.md  main.cpp  nanodet_mnn.cpp  nanodet_mnn.hpp
demo_ncnn/: CMakeLists.txt  main.cpp  nanodet.cpp  nanodet.h
demo_openvino/: README.md  main.cpp
onnx/: nanodet_m_0.5.onnx  pingai.onnx
tools/: export_onnx.py  onnx_nanodet_detect.py  take_photo.py  voc_2_js.py
